EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/13/2010==
Trevius: Live - Updated Player Profile and Spell Buff Structs to allow the May 12th Live patched client to enter the game.
Trevius: Live - Updated about 50% of the opcodes so most basic stuff should be functional.
Derision: Live - Encoded OP_GroundSpawn plus updated OP_ClickObject/OP_ClickObjectAction.
Derision: Added Live to the list of clients reported by #cvs.

==05/12/2010==
Trevius: SoD - Coin no longer adds weight for this client server-side, since the client itself no longer adds coin weight
Trevius: SoD - Heroic Stats should now add the correct amount of HP/Endurance/Mana to match the client in most cases.
Trevius: The scribespell and traindisc commands and quest commands should sort Disciplines properly once again.

==05/11/2010==
Derision: Guild invitations to a player already in receipt of an invitation will now be rejected.
Derision: Fixed quest::pvp("off")
gaeorn: fixed a couple issues with the login server code.

==05/10/2010==
Trevius: SoD - Heroic Stats/Resists now increase the cap server-side as they should.

==05/09/2010==
Derision: Live - Added an encode for OP_ChannelMessage
Derision: Live - Encoded OP_GuildsList and corrected OP_GuildUpdateURLAndChannel.
Derision: Live - Door and Group OPCodes. Set OP_GroundSpawn=0x00000 until an encode can be done for it (was causing crashes, particularly in PoK).

==05/08/2010==
Derision: Guild Bank fix.
Trevius(Derision): Added special handling for certain types of opcodes to correct an issue on the Live client.
Trevius: SoF/SoD - Type 5 clicky items can no longer be used if the character does not meet the race/class requirements of the item.
Trevius: Live - Can now log into the game with new character fine, but some existing characters cause zoning loops.
Derision: Live - Added a Decode for OP_ChannelMessage
Derision: Live - Corrected OP_Camp, OP_MoveItem and OP_ItemPacket.