@@ -6506,6 +6506,47 @@ XS(XS_Mob_SendAppearanceEffect)
 	XSRETURN_EMPTY;
 }
 
+XS(XS_Mob_QuestReward); /* prototype to pass -Wmissing-prototypes */
+XS(XS_Mob_QuestReward)
+{
+	dXSARGS;
+	if (items < 1 || items > 5)
+		Perl_croak(aTHX_ "Usage: Mob::QuestReward(THIS, client, silver, gold, platinum)");
+	{
+		Mob *		THIS;
+		Client*		client = NULL;
+		sint32		silver = 0;
+		sint32		gold = 0;
+		sint32		platinum = 0;		
+
+		if (sv_derived_from(ST(0), "Mob")) {
+			IV tmp = SvIV((SV*)SvRV(ST(0)));
+			THIS = INT2PTR(Mob *,tmp);
+		}
+		else
+			Perl_croak(aTHX_ "THIS is not of type Mob");
+		if(THIS == NULL)
+			Perl_croak(aTHX_ "THIS is NULL, avoiding crash.");
+
+		if (items > 1)	{
+			if (sv_derived_from(ST(1), "Client")) {
+				IV tmp = SvIV((SV*)SvRV(ST(1)));
+				client = INT2PTR(Client *,tmp);
+			}
+			else
+				Perl_croak(aTHX_ "client is not of type Client");
+			if(client == NULL)
+				Perl_croak(aTHX_ "client is NULL, avoiding crash.");
+		}
+		if (items > 2)	{	silver = (sint32)SvIV(ST(2));	}
+		if (items > 3)	{	gold = (sint32)SvIV(ST(3));		}
+		if (items > 4)	{	platinum = (sint32)SvIV(ST(4));	}
+
+		THIS->QuestReward(client, silver, gold, platinum);
+	}
+	XSRETURN_EMPTY;
+}
+
 XS(XS_Mob_SetFlyMode); /* prototype to pass -Wmissing-prototypes */
 XS(XS_Mob_SetFlyMode)
 {
@@ -6904,6 +6945,7 @@ XS(boot_Mob)
 		newXSproto(strcpy(buf, "SetGender"), XS_Mob_SetGender, file, "$$");
 		newXSproto(strcpy(buf, "SendIllusion"), XS_Mob_SendIllusion, file, "$$:$$$$$$$$$$$$");
 		newXSproto(strcpy(buf, "MakeTempPet"), XS_Mob_MakeTempPet, file, "$$;$$$");
+		newXSproto(strcpy(buf, "QuestReward"), XS_Mob_QuestReward, file, "$$:$$$");
 	XSRETURN_YES;
 }
 
